--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,7 +10,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url('../../images/hero/hero-mobile.jpg');
+      url('../images/hero/hero-mobile.jpg');
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -24,7 +24,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url('../../images/hero/hero-mobile@2x.jpg');
+      url('../images/hero/hero-mobile@2x.jpg');
   }
 }
 
@@ -34,7 +34,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url('../../images/hero/hero-tablet.jpg');
+      url('../images/hero/hero-tablet.jpg');
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -48,7 +48,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url('../../images/hero/hero-tablet@2x.png');
+      url('../images/hero/hero-tablet@2x.png');
   }
 }
 
@@ -58,7 +58,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url('../../images/hero/hero-desktop.jpg');
+      url('../images/hero/hero-desktop.jpg');
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -72,7 +72,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url('../../images/hero/hero-desktop@2x.jpg');
+      url('../images/hero/hero-desktop@2x.jpg');
   }
 }
 
