--- a/sass/components/_project-filter.scss
+++ b/sass/components/_project-filter.scss
@@ -1,16 +1,18 @@
 .project-filter {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 25px;
+  row-gap: 15px;
+  column-gap: 8px;
+  margin-bottom: 40px;
 
   @media screen and (min-width: 768px) {
     justify-content: center;
-    margin-bottom: 15px;
+    // margin-bottom: 15px;
   }
 
   &-item:not(:last-child) {
-    margin-right: 8px;
-    margin-bottom: 15px;
+    // margin-right: 8px;
+    // margin-bottom: 15px;
   }
 }
 
