--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -214,10 +214,7 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  row-gap: 15px;
-  -webkit-column-gap: 8px;
-          column-gap: 8px;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
 }
 
 @media screen and (min-width: 768px) {
@@ -225,7 +222,19 @@ img {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-bottom: 15px;
   }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-filter {
+    margin-bottom: 25px;
+  }
+}
+
+.project-filter-item:not(:last-child) {
+  margin-right: 8px;
+  margin-bottom: 15px;
 }
 
 .projects-button {
@@ -642,6 +651,112 @@ img {
   .header .contact-list-link {
     font-size: 14px;
     line-height: 1.143;
+  }
+}
+
+.projects-gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -15px;
+  outline: 1px dashed blue;
+}
+
+.project-container {
+  position: relative;
+  width: 450px;
+  margin: 15px;
+  background: #ffffff;
+  outline: 1px dotted red;
+}
+
+@media screen and (min-width: 768px) {
+  .project-container {
+    width: calc((100% - 2 * 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-container {
+    width: calc((100% - 3 * 30px) / 3);
+  }
+}
+
+.project-container:hover, .project-container:focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project-card {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: none;
+}
+
+.project-type {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.project-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(33, 150, 243, 0.9);
+  visibility: hidden;
+  pointer-events: none;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  -webkit-transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-container-link:hover .overlay,
+.project-container-link:focus .overlay {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.project-description {
+  padding: 77px 24px;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .project-description {
+    padding: 49px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-description {
+    padding: 63px 24px;
   }
 }
 
