--- a/sass/components/_project-filter.scss
+++ b/sass/components/_project-filter.scss
@@ -1,18 +1,20 @@
 .project-filter {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 15px;
-  column-gap: 8px;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
 
   @media screen and (min-width: 768px) {
     justify-content: center;
-    // margin-bottom: 15px;
+    margin-bottom: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 25px;
   }
 
   &-item:not(:last-child) {
-    // margin-right: 8px;
-    // margin-bottom: 15px;
+    margin-right: 8px;
+    margin-bottom: 15px;
   }
 }
 
