--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -489,6 +489,15 @@ img {
 }
 
 .submit-btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 200px;
   height: 50px;
   background: #2196f3;
@@ -506,7 +515,9 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .submit-btn {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin: 0 auto;
   }
 }
