--- a/sass/components/_footer-submit-btn.scss
+++ b/sass/components/_footer-submit-btn.scss
@@ -1,9 +1,12 @@
 .submit-btn {
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    display: block;
+    display: flex;
     margin: 0 auto;
   }
 
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   width: 200px;
   height: 50px;
   background: #2196f3;
