--- a/css/main.css
+++ b/css/main.css
@@ -1087,9 +1087,15 @@ textarea.form-input {
   border-radius: 0px 0px 4px 4px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team-list-item {
     width: calc((100% - 2 * 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list-item {
+    width: 100%;
   }
 }
 
