--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -17,8 +17,12 @@
   &-item {
     margin: 15px;
 
-    @media screen and (min-width: 768px) and (max-width: 1200px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
       width: calc((100% - 2 * 30px) / 2);
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 100%;
     }
 
     background: #ffffff;
