--- a/css/main.css
+++ b/css/main.css
@@ -779,7 +779,7 @@ textarea.form-input {
 }
 
 .footer-form-input {
-  width: 450px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   margin-bottom: 20px;
@@ -789,6 +789,12 @@ textarea.form-input {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
+}
+
+@media screen and (min-width: 480px) {
+  .footer-form-input {
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
