--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -422,7 +422,7 @@ img {
 }
 
 .footer-form-input {
-  width: 450px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   margin-bottom: 20px;
@@ -432,6 +432,12 @@ img {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
+}
+
+@media screen and (min-width: 480px) {
+  .footer-form-input {
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
