--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,8 +1,12 @@
 .footer-form-input {
-  width: 450px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   margin-bottom: 20px;
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
 
   @media screen and (min-width: 1200px) {
     width: 358px;
